WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313927
[JSC] test 262 fail: test/staging/sm/TypedArray/constructor-buffer-sequence.js:
https://bugs.webkit.org/show_bug.cgi?id=313927
Summary
[JSC] test 262 fail: test/staging/sm/TypedArray/constructor-buffer-sequence.js:
Tetsuharu Ohzeki [UTC+9]
Reported
2026-05-03 03:50:00 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tetsuharu Ohzeki [UTC+9]
Comment 1
2026-05-03 04:01:22 PDT
This fail contains multiple failures: 1. Ensure step 4 |AllocateTypedArray| is executed before step 6 |ToIndex(byteOffset)|. 2. Ensure step 7 |offset modulo elementSize ≠ 0| is executed before step 9 |IsDetachedBuffer(buffer)|. 3. Ensure step 7 |offset modulo elementSize ≠ 0| is executed before step 9 |IsDetachedBuffer(buffer)|. 4. Ensure step 7 |offset modulo elementSize ≠ 0| is executed before step 8.a |ToIndex(length)|.
Tetsuharu Ohzeki [UTC+9]
Comment 2
2026-05-04 10:57:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64187
Radar WebKit Bug Importer
Comment 3
2026-05-10 03:50:10 PDT
<
rdar://problem/176724918
>
EWS
Comment 4
2026-05-18 02:40:42 PDT
Committed
313401@main
(8608a8ac3b20): <
https://commits.webkit.org/313401@main
> Reviewed commits have been landed. Closing PR #64187 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug